fix rocket ship final position to be off screen

--- a/src/styles/contactForm.module.css
+++ b/src/styles/contactForm.module.css
@@ -44,7 +44,7 @@
  }
 
  .launch {
-     top: -300%
+     top: -900%
  }
 
  .submitBtn {
